# python-project-lvl4

./: .env.example  .gitignore  Makefile  README.md  manage.py  pyproject.toml  render.yaml  requirements.txt  setup.cfg
.github/workflows/: project-check.yml
labels/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_label_name.py
labels/templates/labels/: label_list.html
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: status_list.html
task_manager/: __init__.py  misc.py  mixins.py  settings.py  tests.py  urls.py  view.py  views.py
task_manager/fixtures/: data.json  test_data.json
task_manager/labels/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: admin.py  apps.py  forms.py  urls.py  views.py
task_manager/statuses/migrations/: 0002_alter_status_name.py
task_manager/tasks/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0003_rename_tasklinktolabel_relationships_and_more.py  0004_alter_task_description_alter_task_executor_and_more.py
task_manager/tasks/templates/tasks/: task_detail.html  task_list.html
task_manager/templates/: delete.html  index.html
task_manager/templates/layouts/: base.html  form.html
task_manager/tests/: test_authentication.py  test_constraints.py  test_crud.py  test_filters.py  test_views.py
task_manager/users/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
tasks/: __init__.py  admin.py  apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0002_tasklinktolabel_task_labels_tasklinktolabel_task.py
tasks/templates/tasks/: task_list.html
tests/: test_authentication.py  test_constraints.py  test_filters.py  test_views.py
users/: admin.py  apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: create.html  delete.html  login.html  update.html  user_list.html
users/tests/: test_auth.py  test_crud.py  test_permission.py  test_views.py
users/tests/fixtures/: test_data.json  users.json
(+1 files in other folders)
