[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager (Hexlet Python Project Level 4)"
authors = ["neihaoo <neihaoo@gmail.com>"]
repository = "https://github.com/neihaoo/python-project-lvl4"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2 = {version = "^2.9.3", optional = true}

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"
coverage = "^6.4.1"

[tool.poetry.extras]
psycopg2 = ["psycopg2"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
