[tool.poetry]
name = "hexlet-code"
version = "0.8.1"
description = "Task Manager (Hexlet Python Project Level 4)"
authors = ["neihaoo <neihaoo@gmail.com>"]
repository = "https://github.com/neihaoo/python-project-lvl4"
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.17"
python-dotenv = "^0.20.0"
dj-database-url = "^0.5.0"
gunicorn = {version = "^22.0.0", optional = true}
psycopg2 = "^2.9.3"
django-bootstrap4 = "^22.1"
django-filter = "^22.1"
rollbar = "^0.16.3"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"
coverage = "^6.4.1"
parameterized = "^0.8.1"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
